# sipmsim

./: CMakeLists.txt  README.md  SiPMSim.cc  action.hh  construction.cc  generator.cc  generator.hh  physics.hh
include/: action.hh  construction.hh  detector.hh  run.hh
macros/: run.mac  vis.mac
src/: action.cc  construction.cc  detector.cc  generator.cc  physics.cc  run.cc
